--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,24 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>AngularWebstore</title>
-  <base href="/">
+<!DOCTYPE html>
+<html lang="fr">
+	
+	<head>
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+		<title>WebStore</title>
+		<base href="/">
+		<link rel="stylesheet" href="assets/css/bootstrap.min.css">
+
+		<script src="assets/js/jquery1.min.js"></script>
+		<script src="assets/js/bootstrap.min.js"></script>
+	</head>
+	
+	
+	<body>
+		
+		<app-root></app-root>	
+		
+	</body>
+	
 </html>
